# Intel-ReAI

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  setup.sh  summarizer.py  test_api_detection.py  test_api_fix.html  test_frontend_api.html
AGENT/: API_SPECIFICATION.md  ENGINEERING_DOCUMENT.md  TESTING_STRATEGY.md
app/: page.tsx
backend/: .env  .env.example  README.md  debug_winston.py  pyproject.toml  quick_test.py  reddit_mvp.db  requirements.txt  run_server.py  seed_db.py  test_ai_detection.py  test_api_integration.py  test_models.py  test_obvious_ai.py  test_winston_integration.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ai.py  comments.py  posts.py  recommendation.py  search.py  subreddits.py
backend/app/data/: fake_data.py  seed_data.py
backend/app/models/: __init__.py  comment.py  post.py  search_history.py  subreddit.py  user.py
backend/app/services/: ai_companion.py  auto_config.py  claude_service.py  content_detection.py  content_moderation.py  context_builder.py  query_processor.py  rag_orchestrator.py  retrieval_engine.py  summarizer.py  winston_ai_service.py
backend/app/tests/: test_posts.py
components/: IRedditDemo.tsx
frontend/: config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/ai/: AICompanion.tsx
frontend/src/pages/: CreateSubreddit.tsx  Home.tsx  Post.tsx  SearchResults.tsx  Subreddit.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+7 files in other folders)
